<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_gap_bg">
    <littleq.mammoth.com.littleq.widget.MainTopTitle
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
    </littleq.mammoth.com.littleq.widget.MainTopTitle>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:layout_below="@id/title">
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_gap2_bg"/>
        <RelativeLayout
            android:id="@+id/ll_lesson_class"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@android:color/white">
            <ImageView
                android:id="@+id/iv_head_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@mipmap/btn_disclosurearrow_gray_n"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"/>

            <littleq.mammoth.com.littleq.widget.CircleImageView
                android:id="@+id/iv_head"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@mipmap/tupai_test_0"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/white"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/iv_head_select"
                android:layout_marginRight="14dp"
                />
            <TextView
                android:id="@+id/tv_lesson_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/iv_head"
                android:layout_marginLeft="15dp"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:text="@string/userinfo_change_head"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_gap2_bg"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/user_gap_bg"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_gap2_bg"/>
        <RelativeLayout
            android:id="@+id/ll_name"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:background="@android:color/white" >
            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:text="@string/userinfo_name"/>

            <TextView
                android:id="@+id/tv_user_name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:text="@string/userinfo_name_detail"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_gap2_bg"/>
        <RelativeLayout
            android:id="@+id/rl_sex"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:background="@android:color/white" >
            <TextView
                android:id="@+id/tv_user_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:text="@string/userinfo_sex"/>

            <TextView
                android:id="@+id/tv_user_sex_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:text="@string/userinfo_sex_detail"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_gap2_bg"/>
        <RelativeLayout
            android:id="@+id/rl_birth"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:background="@android:color/white" >
            <TextView
                android:id="@+id/tv_user_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:text="@string/userinfo_birth"/>

            <TextView
                android:id="@+id/tv_user_birth_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:text="@string/userinfo_birth_detail"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_gap2_bg"/>
        <RelativeLayout
            android:id="@+id/rl_mobile"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:background="@android:color/white" >
            <TextView
                android:id="@+id/tv_user_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:text="@string/userinfo_mobile"/>

            <TextView
                android:id="@+id/tv_user_mobile_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:text="@string/userinfo_mobile_detail"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_gap2_bg"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/user_gap_bg"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_gap2_bg"/>
        <RelativeLayout
            android:id="@+id/rl_myschool"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:background="@android:color/white" >
            <TextView
                android:id="@+id/tv_user_myschool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:text="@string/userinfo_myschool"/>

            <TextView
                android:id="@+id/tv_user_myschool_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:text="@string/userinfo_myschool_detail"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_gap2_bg"/>

    </LinearLayout>
    
</RelativeLayout>
