<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_gap_bg">
    <littleq.mammoth.com.littleq.widget.MainTopTitle
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
    </littleq.mammoth.com.littleq.widget.MainTopTitle>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:layout_below="@id/title">
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/transparent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:text="@string/user_verify_mobile"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_gap2_bg"/>

        <RelativeLayout
            android:id="@+id/rl_verify_input_mobile"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@android:color/white" >
            <TextView
                android:id="@+id/tv_verify_input_mobile"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:text="@string/user_verify_input_mobile"/>

            <EditText
                android:id="@+id/et_verify_input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_verify_input_mobile"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_gap2_bg"/>

        <RelativeLayout
            android:id="@+id/rl_user_verify_code"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@android:color/white" >
            <TextView
                android:id="@+id/tv_user_verify_code"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:text="@string/user_verify_code"/>
            <TextView
                android:id="@+id/tv_user_get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:textColor="@color/royalblue"
                android:textSize="14sp"
                android:text="@string/user_verify_get_code"/>
            <EditText
                android:id="@+id/et_user_verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_user_verify_code"
                android:layout_toLeftOf="@id/tv_user_get_code"
                android:layout_marginRight="10dp" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_gap2_bg"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/transparent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:text="@string/user_verify_new_pwd"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_gap2_bg"/>

        <RelativeLayout
            android:id="@+id/rl_verify_input_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@android:color/white" >
            <TextView
                android:id="@+id/tv_verify_input_new_pwd"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:text="@string/user_verify_input_new_pwd"/>

            <EditText
                android:id="@+id/et_verify_input_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_verify_input_new_pwd"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_gap2_bg"/>

        <RelativeLayout
            android:id="@+id/rl_verify_input_new_pwd2"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@android:color/white" >
            <TextView
                android:id="@+id/tv_verify_input_new_pwd2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:text="@string/user_verify_input_new_pwd2"/>

            <EditText
                android:id="@+id/et_verify_input_new_pwd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_verify_input_new_pwd2"
                android:layout_marginRight="5dp" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_gap2_bg"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/transparent"/>
        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/btn_modify_pwd"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/user_verify_confirm"/>

    </LinearLayout>

</RelativeLayout>
